--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- Tela 1: Boas-vindas -->
     <div id="welcome-screen">
+        <img src="https://raw.githubusercontent.com/soraiacunhab/-Is_tudo-SFMC/2716571b365feaae40ad0ea3e2975e0f2a47416a/Is_tudo%20(1).png" alt="Logo Is_tudo">
         <h1>Bem-vindo, <span id="user-name"></span>!</h1>
         <button id="subscribe-btn">Clique aqui para assinar a newsletter</button>
         <button id="start-quiz">Iniciar Quiz</button>
@@ -44,7 +45,7 @@
         <button id="retry-25">Mais 25 Perguntas</button>
         <button id="retry-50">Mais 50 Perguntas</button>
         <button id="retry-100">Mais 100 Perguntas</button>
-        <button id="start-over-btn">Voltar ao Início</button>
+        <button id="start-over-btn-result">Voltar ao Início</button>
     </div>
 
     <script src="script.js"></script>
